2011-03-16  Paul Eggert  <eggert@cs.ucla.edu>

	* alloc.c (mark_backtrace): Move decl from here ...
	* lisp.h: ... to here, so that it can be checked.

	* eval.c (call_debugger, do_debug_on_call, grow_specpdl): Now static.
	(Fdefvar): Rewrite so as not to use empty "else".
	(lisp_indirect_variable): Name an expression,
	to avoid gcc -Wbad-function-cast warning.
	(Fdefvar): Rename locals to avoid shadowing.

	* callint.c (quotify_arg, quotify_args): Now static.
	(Fcall_interactively): Rename locals to avoid shadowing.
	Use const pointer when appropriate.

	* lisp.h (get_system_name, get_operating_system_release):
	Move decls here, to check interfaces.
	* process.c (get_operating_system_release): Move decl to lisp.h.
	* xrdb.c (get_system_name): Likewise.
	* editfns.c (init_editfns, Fuser_login_name, Fuser_uid):
	(Fuser_real_uid, Fuser_full_name): Remove unnecessary casts,
	some of which prompt warnings from gcc -Wbad-function-cast.
	(Fformat_time_string, Fencode_time, Finsert_char):
	(Ftranslate_region_internal, Fformat):
	Rename or remove local vars to avoid shadowing.
	(Ftranslate_region_internal): Mark var as initialized.

2011-03-15  Paul Eggert  <eggert@cs.ucla.edu>

	* doc.c (Fdocumentation, Fsnarf_documentation): Move locals to
	avoid shadowing.

	* lisp.h (eassert): Check that the argument compiles, even if
	ENABLE_CHECKING is not defined.

	* data.c (Findirect_variable): Name an expression, to avoid
	gcc -Wbad-function-cast warning.
	(default_value, arithcompare, arith_driver, arith_error): Now static.
	(store_symval_forwarding): Rename local to avoid shadowing.
	(Fmake_variable_buffer_local, Fmake_local_variable): Mark
	variables as initialized.
	(do_blv_forwarding, do_symval_forwarding): Remove; unused.

	* alloc.c (check_cons_list): Do not define unless GC_CHECK_CONS_LIST.
	(Fmake_vector, Fvector, Fmake_byte_code, Fgarbage_collect):
	Rename locals to avoid shadowing.
	(mark_stack): Move local variables into the #ifdef region where
	they're used.